# rust-partitions

./: Cargo.toml  README.md
.github/workflows/: ci.yml
include/: partitions.h
src/: capi.rs  error.rs  gpt.rs  gpt_write.rs  lib.rs  mbr.rs  mutation.rs  probe.rs  sniff.rs
tests/: bootable.rs  fixtures.rs  mutation.rs
